welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: ';' expected but '(' found.
  var T:Array[Color](getMondeHauteur())
                    ^Array1:30: error: Unmatched closing brace '}' ignored here
}
^